2008-05-08  Jonh Wendell  <jwendell@gnome.org>

	* docs/Makefile.am, 
	* docs/pt_BR/: Brazilian Portuguese translation by Amadeu Barbosa.


2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* load-graph.c (load_graph_load_config): Fix a memory leak. Patch
	from Vincent Untz (Bug #528603).

2008-04-22  Ilkka Tuohela <hile@iki.fi>

	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
	* docs/fi: Added fi to DOC_LINGUAS

2008-02-24  Changwoo Ryu  <cwryu@debian.org>

	* docs/ko/ko.po: Updated Korean translation.
	* docs/ko/figures/*.png: Updated screenshot.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am: Added ko to DOC_LINGUAS.
	* ko/ko.po: Korean translation gnome-doc-utils migration.
	* ko/*.xml: Removed.
	* ko/figures/*.png: Removed.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_MultiloadApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* global.h:
	* load-graph.c: (load_graph_destroy), (load_graph_new):
	* main.c: (about_cb), (multiload_applet_tooltip_update),
	(multiload_applet_new):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-06-19  Jordi Mas <jmas@softcatala.org>

	* docs/ca/ca.po: Catalan localization by Gil Forcada
	* docs/Makefile.am: ca added to DOC_LINGUAS

2007-03-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* docs/Makefile.am: Added ru to DOC_LINGUAS	
	* docs/ru/ru.po: Added Russian translation by
	Sergey Mironov <sergo@bk.ru>

2007-02-10  AP Singh Alam <aalam@users.sf.net>

	* docs/pa/pa.po: Punjabi Added
	* docs/Makefile.am: pa is added to DOC_LINGUAS

2007-01-25  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added English (British) translation
	* docs/Makefile.am: Added en_GB to DOC_LINGUAS

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/multiload.xml: Fix build.
	* main.c: Remove duplicated include.
