@@ -279,6 +279,15 @@
 		<short>Background color for disk load graph</short>
 	</locale>
 </schema>
+<schema>
+	<key>/schemas/apps/multiload/prefs/system_monitor</key>
+	<owner>multiload_applet-2</owner>
+	<type>string</type>
+	<default>gnome-system-monitor.desktop</default>
+	<locale name="C">
+		<short>The desktop descriptiong file to execute as the system monitor</short>
+	</locale>
+</schema>
 
 </schemalist>
 </gconfschemafile>
