@@ -1,3 +1,11 @@
+2008-05-10  Callum McKenzie  <callum@spooky-possum.org>
+
+	* multiload.schemas.in: 
+	* main.c (start_procman): Make the program launched when the
+	monitor is clicked configurable via gconf. This helps us if we
+	ever decide to change the default program and it keeps the power
+	users happy. Patch from Arthur Taylor (see bug #532424).
+
 2008-05-08  Jonh Wendell  <jwendell@gnome.org>
 
 	* docs/Makefile.am, 
